# ai-cars

./: .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cars-ai.vcxproj  cars-ai.vcxproj.filters  cmake_install.cmake  si-proj.sln
source/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  application.cpp  application.h  cmake_install.cmake  common.h  debug_draw.h  main.cpp  neural_network.cpp  neural_network.h  neuron.cpp  neuron.h  track.h
source/car/: car.cpp  car.h  wheel.cpp  wheel.h
source/helpers/: debug_draw.cpp  debug_draw.h  imgui_sfml.cpp  imgui_sfml.h
